# elisaConverter

./: .gitignore  .replit  IMSIL6KT-20250101.docx  IMSKLK1KT-20250424.docx  IMSKLK1KT-Sample.docx  IMSKLK1KT-datasheet.txt  README.md  add_assay_principle.py  app.py  app.py.bak  app.py.patch  batch_processor.py  boster_template_populator.py  check_actual_kit_contents.py  check_assay_procedure_summary.py  check_assay_summary_output.py  check_background.py  check_data_analysis.py  check_disclaimer.py  check_disclaimer_position.py  check_document_structure.py  check_document_table_position.py  check_enhanced_tables.py  check_enhanced_template.py  check_fixed_tables.py  check_footer.py  check_header_format.py  check_kit_components.py  check_margins.py  check_materials.py  check_modified_template.py  check_output.py  check_overview_table.py  check_preparations.py  check_reagents.py  check_red_dot_output.py  check_red_dot_reagents.py  check_red_dot_template.py  check_reproducibility.py  check_sample_sections.py  (+109 more)
attached_assets/: IHULMNB2KT-Sample.docx  IMSKLK1KT-Sample.docx  Pasted--h1-style-font-family-Calibri-font-size-16pt-Mouse-KLK1-Kallikrein-1-ELISA-Kit-h1-p-style--1745463967202.txt  Pasted-Capture-Detection-Antibodies-It-is-recommended-that-the-standards-be-prepared-no-more-than-2-hours-p-1746040213241.txt  Pasted-Heres-what-you-should-take-from-the-outside-document-and-transfer-into-the-inside-document-User-1746045380450.txt  Pasted-Mouse-KLK1-Kallikrein-1-ELISA-Kit-Catalog-Number-IMSKLK1KT-Lot-Number-20250424-ASSAY-PRINCIP-1746132195370.txt  boster_template_ready.docx  (+3 more)
(+105 files in other folders)
