[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "docxtpl>=0.19.1",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyqt5>=5.15.11",
    "python-docx>=1.1.2",
    "trafilatura>=2.0.0",
    "flask-wtf>=1.2.2",
    "werkzeug>=3.1.3",
]
